--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1"
-    },
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
